--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
     ],
     "driver_path": "F:\\DamaiProject\\chromedriver-win64\\chromedriver-win64\\chromedriver.exe",
     "damai_url": "https://www.damai.cn/",
-    "target_url": "https://m.damai.cn/damai/detail/item.html?itemId=门票ID",
+    "target_url": "https://m.damai.cn/damai/detail/item.html?itemId=828958830792",
     "comment": {
         "title": "comment 下的所有内容为自定义注释,无实际含义",
         "date": "1",
